--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Temperature Converter Website</h1>
+        <h1>Temperature Converter</h1>
         <div class="converter-row">
             <div class="col">
                 <label>Fahrenheit</label>
